fix: x-overflow
Fixed x-overflow issue, Added navigation and footer to all pages, Tested not-found.tsx.

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,8 +20,8 @@ html,
 body {
   min-height: 100vh;
   min-width: 100vw;
-  height: max-content;
-  width: max-content;
+
+  overflow-x: hidden; /* to fix */
 }
 
 /* Transition all */
